@@ -3,10 +3,12 @@
 - add command lines options (-h : help, -v : verbose, -V: version)
 - add lsm description
 - move .popt to /etc/rpmrebuild
+- fix some .popt problems with rpm 4.1 (Han Holl)
 - have a link from rpmrebuild.sh to rpmrebuild
 - add option -b for batch processing
 - add option -k to keep installed files perm
-- fix a buggy test for non-installed packages
+- fix a buggy test for non-installed packages (Han Holl)
+- add option -f to have an external filter (Han Holl)
 
 * Mon Oct  7 2002  <valery_reznic@users.sourceforge.net> 0.7.1
 - split the script for a more modular way
